--- a/templates/base.html
+++ b/templates/base.html
@@ -23,29 +23,22 @@
         <div class="header container-fluid">
             <div class="container">
                 <div class="row align-items-center">
-                    <a href="{{ url_for('index') }}" class="logo col-1">
+                    <a href="{{ url_for('index') }}" class="logo col-2 d-flex justify-content-center">
                         <img src="{{ url_for('static', filename='images/logo.png')}}" alt="logo"/>
                     </a>
-                    <div class="nazvanie col-2">
-                        <a href="{{ url_for('index') }}">
-                            Клиника <code>«Измайловская»</code> им. А.С. Багирова
-                        </a>
-                    </div>
-                    <nav class="col-5 d-flex justify-content-around">
-                        <a href="#">Врачи</a>
-                        <a href="#">Услуги</a>
-                        <a href="#">Расписание</a>
-                        <a href="#">Отзывы</a>
+                    <nav class="col-6 d-flex justify-content-around">
+                        <a href="">Работай у нас</a>
+                        <a href="">Скидки сейчас</a>
+                        <a href="">Магазины на карте</a>
+                        <a href="">О нас</a>
                     </nav>
                     <div class="nomer col-2 d-flex">
                         <img src="{{ url_for('static', filename='images/phone.svg')}}"/>
                         <p>+7 (905) 484-67-05</p>
                     </div>
-                    {% block register %}
-                    <button class="col-2 justify-content-end" id="open_form1">
+                    <button class="col-2 justify-content-end" id="open_form">
                         <p>Личный кабинет</p>
                     </button>
-                    {% endblock register %}
                 </div>
             </div>
         </div>
@@ -67,29 +60,29 @@
                     </div>
                     <div class="d-flex">
                         <img src="{{ url_for('static', filename='images/envelope.svg')}}"/>
-                        <p>pg_les_bratskoe@gmail.com</p>
+                        <p>prostranstvo_edi@gmail.com</p>
                     </div>
                 </div>
                 <div class="ss col-4 justify-content-start">
                     <p>Мы в соцсетях:</p>
                     <div>
-                        <a href="#">
-                            <img src="{{ url_for('static', filename='images/telegram.svg')}}" alt="Telegram"/>@klinika_bagirova
+                        <a href="">
+                            <img src="{{ url_for('static', filename='images/telegram.svg')}}" alt="Telegram"/>@prostranstvo_edi
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <img src="{{ url_for('static', filename='images/instagram.svg')}}" alt="Instagram"/>@bagirov_lechit
+                        <a href="">
+                            <img src="{{ url_for('static', filename='images/instagram.svg')}}" alt="Instagram"/>@prostranstvo_edi
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <img src="{{ url_for('static', filename='images/whatsapp.svg')}}" alt="Whatsapp"/>@izmaylovskaya_bagirov
+                        <a href="">
+                            <img src="{{ url_for('static', filename='images/whatsapp.svg')}}" alt="Whatsapp"/>@prostranstvo_edi
                         </a>
                     </div>
                     <div>
-                        <a href="#">
-                            <img src="{{ url_for('static', filename='images/twitter.svg')}}" alt="Twitter"/>@na_prieme_u_bagirova
+                        <a href="">
+                            <img src="{{ url_for('static', filename='images/twitter.svg')}}" alt="Twitter"/>@prostranstvo_edi
                         </a>
                     </div>
                 </div>
@@ -99,7 +92,7 @@
                         <p>
                             Юридический адрес: Москва,<br>
                             Измайловский проспект, дом 73А<br>
-                            ООО “Клиника «Измайловская» им. А.С. Багирова”<br>
+                            ООО “Сеть супермаркетов «Пространство еды»”<br>
                             ИНН: 5525521517<br>
                             ОГРН: 1152022354020
                         </p>
@@ -116,10 +109,10 @@
             </div>
             <div class="niz row align-items-center">
                 <div class="col-8 justify-content-start">
-                    <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА</p>
+                    <p>ЦЕНЫ МОГУТ ПОМЕНЯТЬСЯ, ОНИ УТОЧНЯЮТСЯ МЕНЕДЖЕРОМ НА ЭТАПЕ ЗАКАЗА.</p>
                 </div>
                 <div class="col-4 justify-content-start">
-                    <p>© 2023 Клиника «Измайловская» им. А.С. Багирова, Все права защищены.</p>
+                    <p>© 2023 Сеть супермаркетов пространство еды. Все права защищены.</p>
                 </div>
             </div>
         </div>
