сделал поиск регистронезависимым, перелопачиваю бд и всё что с ней связано

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -576,7 +576,7 @@ section .elastic code{
 }
 
 .modal .modal_button button:hover{
-    background: var(--color-lgreen);
+    background: var(--color-blue);
 }
 
 .modal .modal_button button p{
