--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
             {% endfor %}
             <h2>Работай у нас</h2>
             <div class="boxes row align-items-center">
-                {% for ser in services %}
+                {% for j in job %}
                 <div class="box col-2">
                     <div class="img">
-                        <a href=""><img src="{{ url_for('static', filename='images/{}'.format(ser['img'])) }}" alt="{{ ser['img'] }}"/></a>
+                        <a href=""><img src="{{ url_for('static', filename='images/{}'.format(j['img'])) }}" alt="{{ j['img'] }}"/></a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="">{{ ser['name'] }}</a>
+                        <a href="">{{ j['name'] }}</a>
                     </div>
                 </div>
                 {% endfor %}
@@ -32,8 +32,8 @@
             <div class="row">
                 <div class="d-flex col-3">
                 <ul class="elastic">
-                    {% for pro in professions %}
-                    <a href=""><li>{{pro}}</li></a>
+                    {% for prod in product %}
+                    <a href=""><li>{{prod}}</li></a>
                     {% endfor %}
                 </ul>
                 </div>
@@ -79,15 +79,15 @@
             <div class="wrapper justify-content-center">
                 <div class="swiper">
                     <div class="swiper-wrapper">
-                        {% for doc in doctors %}
+                        {% for skid in skidki %}
                         <div class="okno swiper-slide">
                             <article class="card">
                                 <div class="card__image">
-                                    <img src="{{ url_for('static', filename='images/swiper/{}'.format(doc['img'])) }}" alt="{{ doc['img'] }}">
+                                    <img src="{{ url_for('static', filename='images/swiper/{}'.format(skid['img'])) }}" alt="{{ skid['img'] }}">
                                 </div>
                                 <div class="card__content">
-                                    <h3 class="card__title">{{ doc['name'] }}</h3>
-                                    <button class="card__btn">{{ doc['coast'] }}</button>
+                                    <h3 class="card__title">{{ skid['name'] }}</h3>
+                                    <button class="card__btn">{{ skid['coast'] }}</button>
                                 </div>
                             </article>
                         </div>
