--- a/blueprintQuery/templates/base.html
+++ b/blueprintQuery/templates/base.html
@@ -46,7 +46,7 @@
     </header>
 
     {% block content %}
-        <h1>Добро пожаловать на {{ title }}!</h1>
+        <h1>Welcome to {{ title }}!</h1>
     {% endblock content %}
 
     <footer class="container-fluid">
