--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,24 @@
         </div>
     </main>
 
+    <sectition class="query">
+        <div class="container">
+            <h2>Страница запросов к товарам</h2>
+            <div class="query_link">
+                <a class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Личный кабинет</p>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </sectition>
+
     <section class="poisk">
         <div class="container">
             <h2>Товары</h2>
             <div class="col-12">
-                <input type="text" id="elastic" placeholder="Поиск Специалиста">
+                <input type="text" id="elastic" placeholder="Поиск товара">
             </div>
             <div class="row">
                 <div class="d-flex col-3">
@@ -38,7 +51,7 @@
                 </ul>
                 </div>
                 <div class="d-flex col-9 justify-content-end">
-                    <img src="{{ url_for('static', filename='images/3d_chel.png') }}" alt="3d_chel">
+                    <img src="{{ url_for('static', filename='images/3d_chel_opa.png') }}" alt="3d_chel">
                 </div>
             </div>
         </div>
@@ -83,11 +96,12 @@
                         <div class="okno swiper-slide">
                             <article class="card">
                                 <div class="card__image">
-                                    <img src="{{ url_for('static', filename='images/swiper/{}'.format(skid['img'])) }}" alt="{{ skid['img'] }}">
+                                    <img src="{{ url_for('static', filename='images/product/{}'.format(skid[2])) }}" alt="{{ skid[2] }}">
                                 </div>
                                 <div class="card__content">
-                                    <h3 class="card__title">{{ skid['name'] }}</h3>
-                                    <button class="card__btn">{{ skid['coast'] }}</button>
+                                    <h3 class="card__title">{{ skid[0] }}</h3>
+                                    <strike>{{ skid[1]*1.2 }}₽</strike>
+                                    <button class="card__btn">{{ skid[1] }}₽</button>
                                 </div>
                             </article>
                         </div>
