--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 </ul>
                 </div>
                 <div class="d-flex col-9 justify-content-end">
-                    <img src="{{ url_for('static', filename='images/3d_chel_opa.png') }}" alt="3d_chel">
+                    <img src="{{ url_for('static', filename='images/3d_chel_pokupatel.png') }}" alt="3d_chel">
                 </div>
             </div>
         </div>
@@ -92,16 +92,16 @@
             <div class="wrapper justify-content-center">
                 <div class="swiper">
                     <div class="swiper-wrapper">
-                        {% for skid in skidki %}
+                        {% for s in sale %}
                         <div class="okno swiper-slide">
                             <article class="card">
                                 <div class="card__image">
-                                    <img src="{{ url_for('static', filename='images/product/{}'.format(skid[2])) }}" alt="{{ skid[2] }}">
+                                    <img src="{{ url_for('static', filename='images/product/{}'.format(s[2])) }}" alt="{{ s[2] }}">
                                 </div>
                                 <div class="card__content">
-                                    <h3 class="card__title">{{ skid[0] }}</h3>
-                                    <strike>{{ skid[1]*1.2 }}₽</strike>
-                                    <button class="card__btn">{{ skid[1] }}₽</button>
+                                    <h3 class="card__title">{{ s[0] }}</h3>
+                                    <strike>{{ s[1]*1.2 }}₽</strike>
+                                    <button class="card__btn">{{ s[1] }}₽</button>
                                 </div>
                             </article>
                         </div>
@@ -138,7 +138,7 @@
             </div>
             <h2>Вы вне личного кабинета</h2>
             <div>
-                <a href=#" class="modal_button d-flex justify-content-center">
+                <a href="" class="modal_button d-flex justify-content-center">
                     <button>
                         <p>Войти</p>
                     </button>
