--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
         <div class="container">
             <h2>Страница запросов к товарам</h2>
             <div class="query_link">
-                <a class="d-flex justify-content-center">
+                <a href="{{ url_for('query.queries') }}" class="d-flex justify-content-center">
                     <button class="col-6">
-                        <p>Личный кабинет</p>
+                        <p>Перейти к запросам</p>
                     </button>
                 </a>
             </div>
