--- a/blueprintQuery/templates/query.html
+++ b/blueprintQuery/templates/query.html
@@ -7,43 +7,53 @@
         </div>
     </div>
 
-    <div class="container queryForm">
-        <form name="queryProduct" action="" method="POST">
-            <div class="auth">
-                <input type="text" name="inputProduct" placeholder="Введите искомый товар">
+    <sectition class="query">
+        <div class="container">
+            <div class="query_link">
+                <a href="{{ url_for('query.product') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Запрос по названию товара</p>
+                    </button>
+                </a>
             </div>
-            <div class="sub d-flex justify-content-center">
-                <input type="submit" name="pushProduct" value="Запрос товаров по названию">
-            </div>
-        </form>
+        </div>
+    </sectition>
 
-        <form name="queryCategory" action="" method="POST">
-            <div class="auth">
-                <input type="text" name="inputCategory" placeholder="Введите искомую категорию">
+    <sectition class="query">
+        <div class="container">
+            <div class="query_link">
+                <a href="{{ url_for('query.category') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Запрос по категории товара</p>
+                    </button>
+                </a>
             </div>
-            <div class="sub d-flex justify-content-center">
-                <input type="submit" name="pushCategory" value="Запрос товаров по категориям">
-            </div>
-        </form>
+        </div>
+    </sectition>
 
-        <form name="queryPrice" action="" method="POST">
-            <div class="auth">
-                <input type="text" name="inputPrice" placeholder="Введите наивысшую цену товара">
+    <sectition class="query">
+        <div class="container">
+            <div class="query_link">
+                <a href="{{ url_for('query.price') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Запрос по цене товара</p>
+                    </button>
+                </a>
             </div>
-            <div class="sub d-flex justify-content-center">
-                <input type="submit" name="pushPrice" value="Запрос товаров по цене">
-            </div>
-        </form>
+        </div>
+    </sectition>
 
-        <form name="querySale" action="" method="POST">
-            <div class="auth">
-                <input type="text" name="inputSale" placeholder="Введите 1 если хотите увидеть товары со скидкой иначе 0">
+    <sectition class="query">
+        <div class="container">
+            <div class="query_link">
+                <a href="{{ url_for('query.sale') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Запрос по наличию скидки у товара</p>
+                    </button>
+                </a>
             </div>
-            <div class="sub d-flex justify-content-center">
-                <input type="submit" name="pushSale" value="Запрос товаров по наличию скидки">
-            </div>
-        </form>
-    </div>
+        </div>
+    </sectition>
 
     <section class="modal" id="modal_id">
         <div class="container modal_box">
@@ -73,30 +83,6 @@
         </div>
     </section>
     <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
-
-    <div class="container">
-        <div class="page_not_found">
-            <h1>Вывод запросов</h1>
-        </div>
-    </div>
-    {% block query %}
-    <div class="queryResult container d-flex justify-content-center">
-        <table>
-            <tr align="justify">
-                {% for column in schema %}
-                <td align="center">{{column}}</td>
-                {% endfor %}
-            </tr>
-            {% for line in result %}
-            <tr align="justify">
-                {% for column in line %}
-                <td align="center"> {{column}} </td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-    {% endblock query %}
 
     <div class="container">
         <div class="page_not_found">
