--- a/templates/exit.html
+++ b/templates/exit.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="page_not_found">
-            <h1>Страница не найдена, вернуться на <a href="{{ url_for('index') }}">главную страницу</a></h1>
+            <h1>Вы вышли из системы, вернуться на <a href="{{ url_for('index') }}">страницу авторизации</a></h1>
             <div class="d-flex justify-content-center">
                 <img src="{{ url_for('static', filename='images/3d_chel_opa.png') }}" alt="3d_chel_opa">
             </div>
