--- a/templates/internal.html
+++ b/templates/internal.html
@@ -31,6 +31,19 @@
         </div>
     </sectition>
 
+    <sectition class="query">
+        <div class="container">
+            <h2>Страница работы с отчётами</h2>
+            <div class="query_link">
+                <a href="{{ url_for('report.reports') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Перейти к отчётам</p>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </sectition>
+
     <section class="poisk">
         <div class="container">
             <h2>Товары</h2>
