--- a/blueprintQuery/templates/selectPatient.html
+++ b/blueprintQuery/templates/selectPatient.html
@@ -10,10 +10,10 @@
     <div class="container queryForm">
         <form name="queryPatient" action="" method="POST">
             <div class="auth">
-                <input type="text" name="inputPatient" placeholder="Введите номер медицинской карты пациента или не вводите ничего">
+                <input type="text" name="inputDoctor" placeholder="Введите номер врача чтобы посмотреть его пациентов">
             </div>
             <div class="sub d-flex justify-content-center">
-                <input type="submit" name="pushPatient" value="Запроcить">
+                <input type="submit" name="pushDoctor" value="Запроcить">
             </div>
         </form>
     </div>
