--- a/templates/base.html
+++ b/templates/base.html
@@ -32,14 +32,14 @@
                         </a>
                     </div>
                     <nav class="col-5 d-flex justify-content-around">
-<!--                        <a href="">Врачи</a>-->
-<!--                        <a href="">Услуги</a>-->
-<!--                        <a href="">Расписание</a>-->
-<!--                        <a href="">Отзывы</a>-->
+                        <a href="">Врачи</a>
+                        <a href="">Услуги</a>
+                        <a href="">Расписание</a>
+                        <a href="">Отзывы</a>
                     </nav>
                     <div class="nomer col-2 d-flex">
-<!--                        <img src="{{ url_for('static', filename='images/phone.svg')}}"/>-->
-<!--                        <p>+7 (905) 484-67-05</p>-->
+                        <img src="{{ url_for('static', filename='images/phone.svg')}}"/>
+                        <p>+7 (905) 484-67-05</p>
                     </div>
                     <div class="col-2 justify-content-end">
                         <a href="{{ url_for('exit') }}">
