--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <sectition class="query">
         <div class="container">
@@ -13,16 +14,16 @@
         </div>
     </sectition>
 
-<!--    <sectition class="query">-->
-<!--        <div class="container">-->
-<!--            <h2>Перейти к назначению осмотров</h2>-->
-<!--            <div class="query_link">-->
-<!--                <a href="{{ url_for('report.reports') }}" class="d-flex justify-content-center">-->
-<!--                    <button class="col-6">-->
-<!--                        <p>Перейти</p>-->
-<!--                    </button>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </sectition>-->
+    <sectition class="query">
+        <div class="container">
+            <h2>Перейти к назначению осмотров</h2>
+            <div class="query_link">
+                <a href="{{ url_for('inspection.setInspection') }}" class="d-flex justify-content-center">
+                    <button class="col-6">
+                        <p>Перейти</p>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </sectition>
 {% endblock content %}
