--- a/templates/head.html
+++ b/templates/head.html
@@ -17,7 +17,7 @@
         <div class="container">
             <h2>Перейти к работе с отчётами</h2>
             <div class="query_link">
-                <a href="{{ url_for('report.reports') }}" class="d-flex justify-content-center">
+                <a href="{{ url_for('report.start_report') }}" class="d-flex justify-content-center">
                     <button class="col-6">
                         <p>Перейти</p>
                     </button>
@@ -25,30 +25,4 @@
             </div>
         </div>
     </sectition>
-
-<!--    <sectition class="query">-->
-<!--        <div class="container">-->
-<!--            <h2>Перейти к просмотру заполненности палат в отделении</h2>-->
-<!--            <div class="query_link">-->
-<!--                <a href="{{ url_for('query.queries') }}" class="d-flex justify-content-center">-->
-<!--                    <button class="col-6">-->
-<!--                        <p>Перейти</p>-->
-<!--                    </button>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </sectition>-->
-
-<!--    <sectition class="query">-->
-<!--        <div class="container">-->
-<!--            <h2>Перейти к назаначению доктора новому пациенту</h2>-->
-<!--            <div class="query_link">-->
-<!--                <a href="{{ url_for('report.reports') }}" class="d-flex justify-content-center">-->
-<!--                    <button class="col-6">-->
-<!--                        <p>Перейти</p>-->
-<!--                    </button>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </sectition>-->
 {% endblock content %}
