--- a/blueprintReport/templates/createReport.html
+++ b/blueprintReport/templates/createReport.html
@@ -46,7 +46,7 @@
 
     <div class="container">
         <div class="page_not_found">
-            <h1>Вернуться на <a href="{{ url_for('report.start_report') }}">страницу работы с отчётами</a></h1>
+            <h1>Вернуться к <a href="{{ url_for('report.start_report') }}">работе с отчётами</a></h1>
         </div>
     </div>
 {% endblock content %}
