--- a/blueprintQuery/templates/selectPatient.html
+++ b/blueprintQuery/templates/selectPatient.html
@@ -45,7 +45,7 @@
 
     <div class="container">
         <div class="page_not_found">
-            <h1>Вернуться на <a href="{{ url_for('query.queries') }}">страницу запросов</a></h1>
+            <h1>Вернуться к <a href="{{ url_for('query.queries') }}">работе с запросами</a></h1>
         </div>
     </div>
 {% endblock content %}
