--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -16,7 +16,7 @@
 
     <sectition class="query">
         <div class="container">
-            <h2>Перейти к назначению осмотров</h2>
+            <h2>Перейти к работе с записями об осмотрах</h2>
             <div class="query_link">
                 <a href="{{ url_for('inspection.setInspection') }}" class="d-flex justify-content-center">
                     <button class="col-6">
